Bug 228674 - Drag and dropping only one of several recurring events does not work
Summary: Drag and dropping only one of several recurring events does not work
Status: VERIFIED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-02-26 22:52 UTC by Sabine Faure
Modified: 2010-07-02 19:17 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-02-26 22:52:45 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch KOrg
- Click on 'New Event' button and create a weekly recurring event starting today and lasting a month
- Click on 'Ok' 
- The events should be displayed in the agenda view.
- Drag and drop today's event one hour earlier
- A pop up 'Changing Recurring Item' dialogue appears. In it there are three buttons: 'Only This Item', 'Also Future Items' (unavailable atm) and 'All Occurences'
- Click on 'Only This Item'
- An 'Error Occured' pop up dialogue appears with the following message: 'Unable to add the exception item to the calendar. No change will be done'.
- Click on 'Ok'

However the event is moved to the new time anyway and so are all the other recurring events.

Trunk, Svn Rev 1096391
Comment 1 Ferdinand Thommes 2010-05-07 12:46:52 UTC
i cannot reproduce with KDE 4.4.3 
The described procedure works without an error and is conducted correctly.
Comment 2 Dotan Cohen 2010-05-07 16:49:28 UTC
In KDE 4.4.3 I do not see the Agenda view at all! Has this been removed?

I tested in Day View instead, and I found that I could move the single event as expected. No bug found.
Comment 3 Drew Winnenberg 2010-05-07 23:35:31 UTC
KDE 4.4.3. Unable to reproduce.

Described procedure behaves as expected.
Comment 4 David Faure 2010-05-07 23:55:34 UTC
Well, obviously it's a regression in trunk (future 4.5). Not the only one, given the port to akonadi...

Nothing has been removed, it's rather that you're looking for "new in 4.5" stuff, in your older 4.4 korganizer ;)
Comment 5 Sergio Martins 2010-05-31 13:14:29 UTC
SVN commit 1132768 by smartins:

Moving only one occurrence or only future ones now works.

BUG: 228674


 M  +4 -4      koagenda.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1132768
Comment 6 Sabine Faure 2010-07-02 19:17:32 UTC
Indeed it is corrected now.

It is possible to drag and drop only one of several recurring events now.

Note: the 'Also Future Items' from the Changing Recurring Item dialogue is still unavailable (greyed) is that on purpose?

Trunk, Svn Rev 1145265