Moving only one occurrence or only future ones now works.

BUG: 228674

svn path=/trunk/KDE/kdepim/; revision=1132768